Setting up test database
-Testing adding and pulling data from the database
-Slight css adjustment

--- a/DMSite/Web.config
+++ b/DMSite/Web.config
@@ -11,6 +11,7 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-DMSite-20190130094703.mdf;Initial Catalog=aspnet-DMSite-20190130094703;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="UsersEntities" connectionString="metadata=res://*/Models.UserModel.csdl|res://*/Models.UserModel.ssdl|res://*/Models.UserModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=users221.database.windows.net;initial catalog=Users;user id=cjwagner;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="UsersEntities1" connectionString="metadata=res://*/Models.Test.csdl|res://*/Models.Test.ssdl|res://*/Models.Test.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=users221.database.windows.net;initial catalog=Users;user id=cjwagner;password=Starfreak213;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
