--- a/DMSite/DMSite.csproj
+++ b/DMSite/DMSite.csproj
@@ -268,6 +268,7 @@
     <Content Include="Images\darkback.png" />
     <Content Include="Images\deadmetal.png" />
     <Content Include="Images\sprite_0.png" />
+    <Content Include="Images\testsignuppage.png" />
     <Content Include="Images\tweeeeet.png" />
     <Content Include="Images\tweetmultiplayer.png" />
     <Content Include="Images\twootcat.png" />
