--- a/DMSite/Web.config
+++ b/DMSite/Web.config
@@ -13,10 +13,7 @@
   </configSections>
   
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-DMSite-20190130094703.mdf;Initial Catalog=aspnet-DMSite-20190130094703;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="UsersEntities" connectionString="metadata=res://*/Models.UserModel.csdl|res://*/Models.UserModel.ssdl|res://*/Models.UserModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=users221.database.windows.net;initial catalog=Users;user id=cjwagner;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="UsersEntities1" connectionString="metadata=res://*/Models.Test.csdl|res://*/Models.Test.ssdl|res://*/Models.Test.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=users221.database.windows.net;initial catalog=Users;user id=cjwagner;password=Starfreak213;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-DMSite-20190130094703.mdf;Initial Catalog=aspnet-DMSite-20190130094703;Integrated Security=True" providerName="System.Data.SqlClient" /><add name="UsersEntities" connectionString="metadata=res://*/Models.UserModel.csdl|res://*/Models.UserModel.ssdl|res://*/Models.UserModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=users221.database.windows.net;initial catalog=Users;user id=cjwagner;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="UsersEntities1" connectionString="metadata=res://*/Models.Test.csdl|res://*/Models.Test.ssdl|res://*/Models.Test.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=users221.database.windows.net;initial catalog=Users;user id=cjwagner;password=Starfreak213;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="UsersEntities2" connectionString="metadata=res://*/Models.User.csdl|res://*/Models.User.ssdl|res://*/Models.User.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=users221.database.windows.net;initial catalog=Users;user id=cjwagner;password=Starfreak213;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="UsersEntities3" connectionString="metadata=res://*/Models.User.csdl|res://*/Models.User.ssdl|res://*/Models.User.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=users221.database.windows.net;initial catalog=Users;user id=cjwagner;password=Starfreak213;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -25,9 +22,9 @@
   </appSettings>
   <system.web>
     <securityPolicy>
-      <trustLevel name="Full" policyFile="internal"/>
+      <trustLevel name="Full" policyFile="internal" />
     </securityPolicy>
-    <trust level="Full" originUrl=""/>
+    <trust level="Full" originUrl="" />
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
