--- a/DMSite/DMSite.csproj
+++ b/DMSite/DMSite.csproj
@@ -363,6 +363,8 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
+    <Content Include="Views\Home\DevBlog.cshtml" />
+    <Content Include="Views\Home\DevBlogPost.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
